<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.leticia.restaurantreservation.presentation.view.activity.HomeActivity"
    android:padding="@dimen/padding_home_root"
    android:background="@color/background_home">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_info"
                    android:padding="@dimen/padding_home_texts"
                    android:textColor="@color/colorAccent"
                    android:layout_centerVertical="true"
                    android:textStyle="bold"/>

                <ImageView
                    android:id="@+id/img_edit_user_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_mode_edit_black_24dp"
                    android:padding="@dimen/padding_home_texts"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:contentDescription="@string/edit_user" />
            </RelativeLayout>

            <TextView
                android:id="@+id/txt_first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_home_texts"
                android:text="@string/first_name_value" />

            <TextView
                android:id="@+id/txt_last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_home_texts"
                android:text="@string/last_name_value" />

            <TextView
                android:id="@+id/txt_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_home_texts"
                android:text="@string/username_value" />
        </LinearLayout>


    </android.support.v7.widget.CardView>



</android.support.constraint.ConstraintLayout>
